# cpp-gui-calculator

./: CMakeLists.txt  README.md  linuxsetup.sh  main.cpp  windowssetup.bat
